Reformating of code