@@ -14,46 +14,45 @@ import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ControllerAdviser extends ResponseEntityExceptionHandler {
+    private static final String TIME_STAMP = "timestamp";
     @ExceptionHandler(ResourceAlreadyExistsException.class)
-    public ResponseEntity<Object> handleResourceAlreadyExistsException (
-            ResourceAlreadyExistsException ex, WebRequest request) {
+    public ResponseEntity<Object> handleResourceAlreadyExistsException(ResourceAlreadyExistsException ex,
+                                                                       WebRequest request) {
+
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDateTime.now());
+        body.put(TIME_STAMP, LocalDateTime.now());
         body.put("message", "Resource already exists");
 
         return new ResponseEntity<>(body, HttpStatus.CONFLICT);
     }
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<Object> handleResourceNotFoundException(
-            ResourceNotFoundException ex, WebRequest request) {
+    public ResponseEntity<Object> handleResourceNotFoundException(ResourceNotFoundException ex,
+                                                                  WebRequest request) {
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDateTime.now());
+        body.put(TIME_STAMP, LocalDateTime.now());
         body.put("message", "No resource found");
 
         return new ResponseEntity<>(body, HttpStatus.NOT_FOUND);
     }
 
     @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(
-            MethodArgumentNotValidException ex, HttpHeaders headers,
-            HttpStatus status, WebRequest request) {
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
+                                                                  HttpHeaders headers, HttpStatus status, WebRequest request) {
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", LocalDate.now());
+        body.put(TIME_STAMP, LocalDate.now());
         body.put("status", status.value());
 
         List<String> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
+                .getFieldErrors().stream()
                 .map(x -> x.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         body.put("errors", errors);
 
